<resources>
    <string name="app_name">BookMarket</string>
    <string name="main_prompt">Looking to:</string>
    <string name="Sell">Sell</string>
    <string name="Buy">Buy</string>
    <string name="your_books">Your Books</string>
    <string name="Add_Post">Add Post</string>
    <string name="Add_Book">Add Book</string>
    <string name="Add_Books">Add Books</string>
    <string name="no_books_added">No Books Added</string>
    <string name="post_confirm">Post!</string>
    <string name="notes">Notes</string>
    <string name="negotiableq">Negotiable?</string>
    <string name="coursesubj">Course Type</string>
    <string name="coursenumber">Course Number</string>
    <string name="booktitle">Book Title</string>
    <string name="author">Author</string>
    <string name="price">Price</string>
    <string name="vnum">Ed. #:</string>
    <string name="courseinstructor">Course Instructor:</string>
    <string name="sell_main_layout_title">People are looking for:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="settings">Settings</string>
    <string name="search">Search/Scan Post</string>
    <string name="message">Message</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_google">Sign in with Google! </string>
    <string name="sign_in_note">Remember, only UMN email accounts (@umn.edu) can access certain features (such as posting)</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="title_activity_sell_view_user_post">SellViewUserPost</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sold_query">Sold?</string>
    <string name="sold_conf">Sold!</string>
    <string name="required">Required:</string>
    <string name="optional">Optional:</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exampleCourse">E.g. PHYS 1302W, SOC 1001, etc.</string>
    <string name="new_book">New Book</string>
    <string name="flag">flag</string>
    <string name="no_requests">No Requests for your book!</string>
    <string name="accept">Accept</string>
    <string name="decline">decline</string>
    <string name="accepted">Accepted</string>
    <string name="view_messages">View Msgs</string>

</resources>
