<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_book_dialog_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/required"
            android:textStyle="bold" />

        <!-- Course Type -->

        <TextView
            android:labelFor="@id/sell_course_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/coursesubj"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_course_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters" />

        <!-- Course Number -->

        <TextView
            android:labelFor="@id/sell_course_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/coursenumber"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_course_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/optional"
            android:textStyle="bold" />

        <!-- Book Title -->
        <TextView
            android:labelFor="@id/sell_book_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/booktitle"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_book_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <!-- Book Author -->
        <TextView
            android:labelFor="@id/sell_author_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/author"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_author_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <!-- Book Low Price -->

        <TextView
            android:labelFor="@id/sell_low_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/min_price"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_low_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <!-- Book High Price -->

        <TextView
            android:labelFor="@id/sell_high_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/max_price"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_high_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <!-- Book Version Number -->
        <TextView
            android:labelFor="@id/sell_vnum_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/vnum"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_vnum_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Course Professor -->
        <TextView
            android:labelFor="@id/sell_instructor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/courseinstructor"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_instructor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </LinearLayout>

</ScrollView>