<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_book_dialog_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Todo: Remove focus from the EditTexts at the start and after editing -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Course Type -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/sell_course_type_text"
                    android:text="@string/coursesubj"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/sell_course_type_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/sell_course_number_text"
                    android:text="@string/coursenumber"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/sell_course_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>


        <!-- Course Number -->

        <!-- Book Title -->
        <TextView
            android:labelFor="@id/sell_book_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/booktitle"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_book_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:gravity="center"/>

        <!-- Book Author -->

        <!-- Book Price -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/sell_price_text"
                    android:text="@string/price"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/sell_price_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/sell_author_text"
                    android:text="@string/author"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/sell_author_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/sell_vnum_text"
                    android:text="@string/vnum"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/sell_vnum_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="center"/>
            </LinearLayout>


        </LinearLayout>


        <!-- Book Version Number -->


        <!-- Course Professor -->

        <TextView
            android:labelFor="@id/sell_book_notes_text"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/notes"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sell_book_notes_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>